# AED-ProyectoFinal

./: CMakeLists.txt  README.md  main.cpp
benchmark/: Benchmark.cpp  Benchmark.h  QueryBenchmark.cpp  QueryBenchmark.h  QueryResult.h
csv/: CSVLoader.cpp  CSVLoader.h
data/: dataset_1000.csv  dataset_10000.csv  movies_dataset_10000.csv
database/: Database.cpp  Database.h
hash/: HashSet.h  HashTable.h
models/: Record.h
rbtree/: Color.h  RBNode.h  RedBlackTree.cpp  RedBlackTree.h
visualization/: DatabaseVisualizer.cpp  DatabaseVisualizer.h  RBVisualizer.cpp  RBVisualizer.h  TreeLayout.cpp  TreeLayout.h
